# syntax_highlighter_plus

./: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
assets/grammars/: abap.json.zst  ada.json.zst  awk.json.zst  bat.json.zst  c.json.zst  clojure.json.zst  cmake.json.zst  cpp.json.zst  csharp.json.zst  css.json.zst  csv.json.zst  d.json.zst  dart.json.zst  diff.json.zst  docker.json.zst  elixir.json.zst  erlang.json.zst  fsharp.json.zst  go.json.zst  graphql.json.zst  haskell.json.zst  html.json.zst  http.json.zst  ini.json.zst  java.json.zst  javascript.json.zst  jinja.json.zst  json.json.zst  json5.json.zst  jsonc.json.zst  jsonl.json.zst  jsx.json.zst  julia.json.zst  just.json.zst  kotlin.json.zst  llvm.json.zst  lua.json.zst  make.json.zst  markdown.json.zst  matlab.json.zst  (+35 more)
example/: .metadata  pubspec.yaml
example/integration_test/: grammars_test.dart  highlight_test.dart
example/lib/: main.dart
integration_test/: simple_test.dart
ios/: syntax_highlighter_plus.podspec
ios/Classes/: big5.c  cp1251.c  euc_jp.c  euc_kr.c  (+26 more)
lib/: colors.dart  grammar_registry.dart  main.dart  syntax_highlighter.dart  syntax_highlighter_plus.dart  syntax_theme.dart  utils.dart
linux/: CMakeLists.txt
macos/: syntax_highlighter_plus.podspec
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: highlighter.rs  mod.rs
rust/src/textmate/: grammar.rs  mod.rs  raw.rs  regex.rs  tokenizer.rs
rust_builder/: pubspec.yaml
src/: CMakeLists.txt
src/oniguruma-6.9.10/src/: config.h
test/: highlighter_test.dart  span_builder_test.dart  syntax_theme_test.dart
windows/: CMakeLists.txt
(+48 files in other folders)
